src/com/lo17/syntaxer/SQLParser.java
// Generated from /Users/Natan/Developer/search_engine_lo17/src/com/lo17/syntaxer/SQL.g4 by ANTLR 4.7.2
package com.lo17.syntaxer;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SQLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SELECT=1, SELECT_FICHIER=2, SELECT_NUMERO=3, SELECT_SHORT_DATE=4, COUNT=5, 
		CONJ_OR=6, CONJ_AND=7, MOT=8, MOT_TITRE=9, MOT_TEXTE=10, RUBRIQUE=11, 
		DATE=12, DATE_TO=13, DATE_BEFORE=14, DATE_FROM=15, DATE_AFTER=16, DATE_BETWEEN=17, 
		VAR_JOUR=18, VAR_ANNEE=19, VAR_DATE=20, VAR_MOIS_JANVIER=21, VAR_MOIS_FEVRIER=22, 
		VAR_MOIS_MARS=23, VAR_MOIS_AVRIL=24, VAR_MOIS_MAI=25, VAR_MOIS_JUIN=26, 
		VAR_MOIS_JUILLET=27, VAR_MOIS_AOUT=28, VAR_MOIS_SEPTEMBRE=29, VAR_MOIS_OCTOBRE=30, 
		VAR_MOIS_NOVEMBRE=31, VAR_MOIS_DECEMBRE=32, VAR_MOT=33, WS=34, POINT=35;
	public static final int
		RULE_requete = 0, RULE_select = 1, RULE_params = 2, RULE_param = 3, RULE_conj = 4, 
		RULE_var_date = 5;
	private static String[] makeRuleNames() {
		return new String[] {
			"requete", "select", "params", "param", "conj", "var_date"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'fichier'", "'bulletin'", "'quand'", "'combien'", "'ou'", 
			null, null, "'titre'", "'texte'", "'rubrique'", "'date'", "'jusque'", 
			"'avant'", "'depuis'", "'apres'", "'entre'", null, null, null, "'janvier'", 
			"'f\u00E9vrier'", "'mars'", "'avril'", "'mai'", "'juin'", "'juillet'", 
			"'ao\u00FBt'", "'septembre'", "'octobre'", "'novembre'", "'d\u00E9cembre'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "SELECT", "SELECT_FICHIER", "SELECT_NUMERO", "SELECT_SHORT_DATE", 
			"COUNT", "CONJ_OR", "CONJ_AND", "MOT", "MOT_TITRE", "MOT_TEXTE", "RUBRIQUE", 
			"DATE", "DATE_TO", "DATE_BEFORE", "DATE_FROM", "DATE_AFTER", "DATE_BETWEEN", 
			"VAR_JOUR", "VAR_ANNEE", "VAR_DATE", "VAR_MOIS_JANVIER", "VAR_MOIS_FEVRIER", 
			"VAR_MOIS_MARS", "VAR_MOIS_AVRIL", "VAR_MOIS_MAI", "VAR_MOIS_JUIN", "VAR_MOIS_JUILLET", 
			"VAR_MOIS_AOUT", "VAR_MOIS_SEPTEMBRE", "VAR_MOIS_OCTOBRE", "VAR_MOIS_NOVEMBRE", 
			"VAR_MOIS_DECEMBRE", "VAR_MOT", "WS", "POINT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SQL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class RequeteContext extends ParserRuleContext {
		public Arbre arbre = new Arbre("requete");
		public SelectContext var_select;
		public ParamsContext var_params;
		public SelectContext select() {
			return getRuleContext(SelectContext.class,0);
		}
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public TerminalNode POINT() { return getToken(SQLParser.POINT, 0); }
		public RequeteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_requete; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLListener ) ((SQLListener)listener).enterRequete(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLListener ) ((SQLListener)listener).exitRequete(this);
		}
	}

	public final RequeteContext requete() throws RecognitionException {
		RequeteContext _localctx = new RequeteContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_requete);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(12);
			((RequeteContext)_localctx).var_select = select();
			 _localctx.arbre.ajouteFils(((RequeteContext)_localctx).var_select.arbre); 
			setState(14);
			((RequeteContext)_localctx).var_params = params();
			 _localctx.arbre.ajouteFils(((RequeteContext)_localctx).var_params.arbre); 
			setState(17);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==POINT) {
				{
				setState(16);
				match(POINT);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectContext extends ParserRuleContext {
		public Arbre arbre = new Arbre("select");
		public TerminalNode SELECT() { return getToken(SQLParser.SELECT, 0); }
		public List<TerminalNode> SELECT_FICHIER() { return getTokens(SQLParser.SELECT_FICHIER); }
		public TerminalNode SELECT_FICHIER(int i) {
			return getToken(SQLParser.SELECT_FICHIER, i);
		}
		public List<TerminalNode> SELECT_NUMERO() { return getTokens(SQLParser.SELECT_NUMERO); }
		public TerminalNode SELECT_NUMERO(int i) {
			return getToken(SQLParser.SELECT_NUMERO, i);
		}
		public List<TerminalNode> DATE() { return getTokens(SQLParser.DATE); }
		public TerminalNode DATE(int i) {
			return getToken(SQLParser.DATE, i);
		}
		public List<TerminalNode> RUBRIQUE() { return getTokens(SQLParser.RUBRIQUE); }
		public TerminalNode RUBRIQUE(int i) {
			return getToken(SQLParser.RUBRIQUE, i);
		}
		public List<TerminalNode> CONJ_AND() { return getTokens(SQLParser.CONJ_AND); }
		public TerminalNode CONJ_AND(int i) {
			return getToken(SQLParser.CONJ_AND, i);
		}
		public TerminalNode SELECT_SHORT_DATE() { return getToken(SQLParser.SELECT_SHORT_DATE, 0); }
		public TerminalNode COUNT() { return getToken(SQLParser.COUNT, 0); }
		public SelectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_select; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLListener ) ((SQLListener)listener).enterSelect(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLListener ) ((SQLListener)listener).exitSelect(this);
		}
	}

	public final SelectContext select() throws RecognitionException {
		SelectContext _localctx = new SelectContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_select);
		int _la;
		try {
			setState(57);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SELECT:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(19);
				match(SELECT);
				setState(28);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case SELECT_FICHIER:
					{
					setState(20);
					match(SELECT_FICHIER);
					 _localctx.arbre.ajouteFils(new Arbre("", "fichier")); 
					}
					break;
				case SELECT_NUMERO:
					{
					setState(22);
					match(SELECT_NUMERO);
					 _localctx.arbre.ajouteFils(new Arbre("", "numero")); 
					}
					break;
				case DATE:
					{
					setState(24);
					match(DATE);
					 _localctx.arbre.ajouteFils(new Arbre("", "date")); 
					}
					break;
				case RUBRIQUE:
					{
					setState(26);
					match(RUBRIQUE);
					 _localctx.arbre.ajouteFils(new Arbre("", "rubrique")); 
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(43);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==CONJ_AND) {
					{
					{
					setState(30);
					match(CONJ_AND);
					setState(39);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case SELECT_FICHIER:
						{
						setState(31);
						match(SELECT_FICHIER);
						 _localctx.arbre.ajouteFils(new Arbre("", ", fichier")); 
						}
						break;
					case SELECT_NUMERO:
						{
						setState(33);
						match(SELECT_NUMERO);
						 _localctx.arbre.ajouteFils(new Arbre("", ", numero")); 
						}
						break;
					case DATE:
						{
						setState(35);
						match(DATE);
						 _localctx.arbre.ajouteFils(new Arbre("", ", date")); 
						}
						break;
					case RUBRIQUE:
						{
						setState(37);
						match(RUBRIQUE);
						 _localctx.arbre.ajouteFils(new Arbre("", "rubrique")); 
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					}
					setState(45);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				break;
			case SELECT_SHORT_DATE:
				enterOuterAlt(_localctx, 2);
				{
				setState(46);
				match(SELECT_SHORT_DATE);
				 _localctx.arbre.ajouteFils(new Arbre("", "date")); 
				}
				break;
			case COUNT:
				enterOuterAlt(_localctx, 3);
				{
				{
				setState(48);
				match(COUNT);
				setState(55);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case SELECT_FICHIER:
					{
					setState(49);
					match(SELECT_FICHIER);
					 _localctx.arbre.ajouteFils(new Arbre("", "count(fichier)")); 
					}
					break;
				case SELECT_NUMERO:
					{
					setState(51);
					match(SELECT_NUMERO);
					 _localctx.arbre.ajouteFils(new Arbre("", "count(numero)")); 
					}
					break;
				case RUBRIQUE:
					{
					setState(53);
					match(RUBRIQUE);
					 _localctx.arbre.ajouteFils(new Arbre("", "count(rubrique)")); 
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamsContext extends ParserRuleContext {
		public Arbre arbre = new Arbre("params");
		public ParamContext par1;
		public ConjContext conj1;
		public ParamContext par2;
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public List<ConjContext> conj() {
			return getRuleContexts(ConjContext.class);
		}
		public ConjContext conj(int i) {
			return getRuleContext(ConjContext.class,i);
		}
		public ParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_params; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLListener ) ((SQLListener)listener).enterParams(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLListener ) ((SQLListener)listener).exitParams(this);
		}
	}

	public final ParamsContext params() throws RecognitionException {
		ParamsContext _localctx = new ParamsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_params);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			((ParamsContext)_localctx).par1 = param();

			        _localctx.arbre.ajouteFils(((ParamsContext)_localctx).par1.arbre);
			    
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CONJ_OR) | (1L << CONJ_AND) | (1L << MOT) | (1L << MOT_TITRE) | (1L << MOT_TEXTE) | (1L << RUBRIQUE) | (1L << DATE) | (1L << DATE_TO) | (1L << DATE_BEFORE) | (1L << DATE_FROM) | (1L << DATE_AFTER) | (1L << DATE_BETWEEN))) != 0)) {
				{
				{
				setState(64);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==CONJ_OR || _la==CONJ_AND) {
					{
					setState(61);
					((ParamsContext)_localctx).conj1 = conj();

					                _localctx.arbre.ajouteFils(((ParamsContext)_localctx).conj1.arbre);
					            
					}
				}

				setState(66);
				((ParamsContext)_localctx).par2 = param();

				            _localctx.arbre.ajouteFils(((ParamsContext)_localctx).par2.arbre);
				        
				}
				}
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamContext extends ParserRuleContext {
		public Arbre arbre = new Arbre("param");
		public Token var_mot_1;
		public ConjContext conj1;
		public Token var_mot_2;
		public Token var_rubrique_1;
		public Var_dateContext var_date_1;
		public Var_dateContext var_date_2;
		public Token var_date_comp;
		public TerminalNode MOT_TEXTE() { return getToken(SQLParser.MOT_TEXTE, 0); }
		public List<TerminalNode> VAR_MOT() { return getTokens(SQLParser.VAR_MOT); }
		public TerminalNode VAR_MOT(int i) {
			return getToken(SQLParser.VAR_MOT, i);
		}
		public TerminalNode MOT() { return getToken(SQLParser.MOT, 0); }
		public List<ConjContext> conj() {
			return getRuleContexts(ConjContext.class);
		}
		public ConjContext conj(int i) {
			return getRuleContext(ConjContext.class,i);
		}
		public TerminalNode MOT_TITRE() { return getToken(SQLParser.MOT_TITRE, 0); }
		public TerminalNode RUBRIQUE() { return getToken(SQLParser.RUBRIQUE, 0); }
		public TerminalNode DATE() { return getToken(SQLParser.DATE, 0); }
		public List<Var_dateContext> var_date() {
			return getRuleContexts(Var_dateContext.class);
		}
		public Var_dateContext var_date(int i) {
			return getRuleContext(Var_dateContext.class,i);
		}
		public TerminalNode DATE_TO() { return getToken(SQLParser.DATE_TO, 0); }
		public TerminalNode DATE_BEFORE() { return getToken(SQLParser.DATE_BEFORE, 0); }
		public TerminalNode DATE_FROM() { return getToken(SQLParser.DATE_FROM, 0); }
		public TerminalNode DATE_AFTER() { return getToken(SQLParser.DATE_AFTER, 0); }
		public TerminalNode CONJ_AND() { return getToken(SQLParser.CONJ_AND, 0); }
		public TerminalNode DATE_BETWEEN() { return getToken(SQLParser.DATE_BETWEEN, 0); }
		public ParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLListener ) ((SQLListener)listener).enterParam(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLListener ) ((SQLListener)listener).exitParam(this);
		}
	}

	public final ParamContext param() throws RecognitionException {
		ParamContext _localctx = new ParamContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_param);
		int _la;
		try {
			int _alt;
			setState(169);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case MOT_TEXTE:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(74);
				match(MOT_TEXTE);
				setState(76);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==MOT) {
					{
					setState(75);
					match(MOT);
					}
				}


							_localctx.arbre.ajouteFils(new Arbre("table", "texte"));
						
				setState(79);
				((ParamContext)_localctx).var_mot_1 = match(VAR_MOT);
				 _localctx.arbre.ajouteFils(new Arbre("mot=", "'"+((ParamContext)_localctx).var_mot_1.getText()+"'")); 
				setState(88);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(81);
						((ParamContext)_localctx).conj1 = conj();
						 _localctx.arbre.ajouteFils(((ParamContext)_localctx).conj1.arbre); 
						setState(83);
						((ParamContext)_localctx).var_mot_2 = match(VAR_MOT);
						 _localctx.arbre.ajouteFils(new Arbre("mot=", "'"+((ParamContext)_localctx).var_mot_2.getText()+"'")); 
						}
						} 
					}
					setState(90);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
				}
				}
				}
				break;
			case MOT_TITRE:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(91);
				match(MOT_TITRE);
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==MOT) {
					{
					setState(92);
					match(MOT);
					}
				}


							_localctx.arbre.ajouteFils(new Arbre("table", "titre"));
						
				setState(96);
				((ParamContext)_localctx).var_mot_1 = match(VAR_MOT);
				 _localctx.arbre.ajouteFils(new Arbre("mot=", "'"+((ParamContext)_localctx).var_mot_1.getText()+"'")); 
				setState(105);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(98);
						((ParamContext)_localctx).conj1 = conj();
						 _localctx.arbre.ajouteFils(((ParamContext)_localctx).conj1.arbre); 
						setState(100);
						((ParamContext)_localctx).var_mot_2 = match(VAR_MOT);
						 _localctx.arbre.ajouteFils(new Arbre("mot=", "'"+((ParamContext)_localctx).var_mot_2.getText()+"'")); 
						}
						} 
					}
					setState(107);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
				}
				}
				}
				break;
			case MOT:
				enterOuterAlt(_localctx, 3);
				{
				{
				setState(108);
				match(MOT);
				 _localctx.arbre.ajouteFils(new Arbre("table", "titretexte")); 
				setState(110);
				((ParamContext)_localctx).var_mot_1 = match(VAR_MOT);

				            _localctx.arbre.ajouteFils(new Arbre("mot=", "'" + ((ParamContext)_localctx).var_mot_1.getText() + "'"));
				        
				setState(119);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(112);
						((ParamContext)_localctx).conj1 = conj();
						 _localctx.arbre.ajouteFils(((ParamContext)_localctx).conj1.arbre); 
						setState(114);
						((ParamContext)_localctx).var_mot_2 = match(VAR_MOT);

						                _localctx.arbre.ajouteFils(new Arbre("mot=", "'" + ((ParamContext)_localctx).var_mot_2.getText() + "'"));
						            
						}
						} 
					}
					setState(121);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
				}
				}
				}
				break;
			case RUBRIQUE:
				enterOuterAlt(_localctx, 4);
				{
				{
				setState(122);
				match(RUBRIQUE);
				 _localctx.arbre.ajouteFils(new Arbre("table", "rubrique")); 
				setState(124);
				((ParamContext)_localctx).var_rubrique_1 = match(VAR_MOT);
				 _localctx.arbre.ajouteFils(new Arbre("rubrique=", "'"+((ParamContext)_localctx).var_rubrique_1.getText()+"'")); 
				setState(133);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(126);
						((ParamContext)_localctx).conj1 = conj();
						 _localctx.arbre.ajouteFils(((ParamContext)_localctx).conj1.arbre); 
						setState(128);
						((ParamContext)_localctx).var_rubrique_1 = match(VAR_MOT);
						 _localctx.arbre.ajouteFils(new Arbre("rubrique=", "'"+((ParamContext)_localctx).var_rubrique_1.getText()+"'")); 
						}
						} 
					}
					setState(135);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
				}
				}
				}
				break;
			case DATE:
				enterOuterAlt(_localctx, 5);
				{
				{
				setState(136);
				match(DATE);
